menambhkan bagian error validasi dam validasi data input serta modul review

--- a/views/places/show.ejs
+++ b/views/places/show.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/app') %>
 
 <div class="row mb-5" >
-    <div class="col-6 offset-3">
+    <div class="col-6 ">
         <div class="card">
             <img src="<%= place.image %>" alt="<% place.title %>" class="card-image-top">
             <div class="card-body">
@@ -23,7 +23,38 @@
             </div>
         </div>
     </div>
-
+<div class="col-6">
+    <h3>leave a review
+        <form action="/places/<%= place._id %>/reviews" method="POST" class="validated-form" novalidate>
+            <div class="mb-3">
+                <label for="rating">Rating</label>
+                <input type="range" name="review[rating]" min="1" max="5" class="form-range">
+            </div>
+            <div class="mb-3">
+                <label for="review">Comments</label>
+                <textarea name="review[body]" id="body" cols="30" rows="5" class="form-control" required></textarea>
+                <div class="valid-feedback">
+                    looks good
+                   </div> 
+                   <div class="invalid-feedback">
+                    please fill out.
+                   </div>
+            </div>
+            <button type="submit" class="btn btn-success">submit</button>
+        </form>
+        <% for (const review of place.reviews) { %>
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title">Rating : <%= review.rating %></h5>
+                    <p class="cart-text"><%= review.body %></p>
+                    <form action="/places/<%= place._id  %>/reviews/<%= review._id %>?_method=DELETE" method="POST" style="display: inline!important">
+                    <button class="btn btn-danger btn-sm">Delete</button>
+                    </form>
+                </div>
+            </div>
+            <% } %>
+    </h3>
+</div>
 </div>
 
 
