--- a/views/layouts/partials/navbar.ejs
+++ b/views/layouts/partials/navbar.ejs
@@ -5,7 +5,8 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link " href="/">Home</a>
           </li>
@@ -16,6 +17,28 @@
             <a class="nav-link" href="/places/create">New Place</a>
           </li>
         </ul>
+
+        <ul class="navbar-nav ">
+          <% if (!currentUser) { %>
+          <li class="nav-item">
+            <a class="nav-link " href="/login">login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/register">register</a>
+          </li>
+          <% } else { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout" onclick="
+              event.preventDefault();
+              document.getElementById('logout-form').submit();
+                             ">logout</a>
+            <form action="/logout" method="POST"style="display: none ;" id="logout-form" ></form>
+
+          </li>
+          <% } %>
+        </ul>
+
+
       </div>
     </div>
   </nav>
