--- a/views/places/create.ejs
+++ b/views/places/create.ejs
@@ -2,7 +2,7 @@
     <h1 class="text-center">ADD Place</h1>
 <div class="col-6 offset-3">
 
-    <form action="/places" method="POST" class="validated-form" novalidate>
+    <form action="/places" method="POST" class="validated-form" novalidate enctype="multipart/form-data">
         <div class="mb-3">
             <label for="title" class="form-label">Title</label>
             <input type="text" name="place[title]" id="title" class="form-control" required>
@@ -38,8 +38,8 @@
             <textarea type="text" name="place[description]" id ="description"class="form-control" ></textarea>
         </div >
         <div class="mb-3">
-            <label for="image" class="form-label">Image URL</label>
-            <input type="text" name="place[image]" id ="image"class="form-control" required>
+            <label for="image" class="form-label">Image</label>
+            <input type="file" name="image" id="image" accept="image/*" multiple required>
             <div class="valid-feedback">
                 looks good
                </div> 
